--- a/ModularFrameWorkATG/pom.xml
+++ b/ModularFrameWorkATG/pom.xml
@@ -3,6 +3,7 @@
   <groupId>ModularFrameWorkATG</groupId>
   <artifactId>ModularFrameWorkATG</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
   <properties>
   <suiteXmlFile>src/main/resources/testng.xml</suiteXmlFile>
   </properties>
@@ -31,4 +32,24 @@
 			<version>5.0.8</version>
 		</dependency>
   </dependencies> 
+  
+   <build>
+  <plugins>
+  <plugin>
+   <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <version>3.8.1</version>
+  </plugin>
+  <plugin>
+   <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>2.22.2</version>
+    <configuration>
+    <suiteXmlFiles>
+    <suiteXmlFile>${suiteXmlFIle}</suiteXmlFile>
+    </suiteXmlFiles>
+    </configuration>
+  </plugin>
+  </plugins>
+  </build>
 </project>
